Fixed some libraries building for MTd/MT. But there are a lot of manually built libraries

--- a/source/radeon_gpu_analyzer_cli/CMakeLists.txt
+++ b/source/radeon_gpu_analyzer_cli/CMakeLists.txt
@@ -64,7 +64,9 @@ endif()
 
 # Windows-specific include directories
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
-    include_directories("${PROJECT_SOURCE_DIR}/../../external/dx10_asm/include")
+    if(NOT RGA_DISABLE_DX10)
+        include_directories("${PROJECT_SOURCE_DIR}/../../external/dx10_asm/include")
+    endif()
 endif()
 
 # Source files that are common for Windows and Linux
@@ -88,14 +90,25 @@ if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
     add_executable(radeon_gpu_analyzer_cli ${WINDOWS_INC} ${COMMON_SRC} ${WINDOWS_SRC})
     
     # 64-bit target
-    find_library(BOOST_LIBRARY1 libboost_filesystem-vc140-mt-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
-    find_library(BOOST_LIBRARY2 libboost_system-vc140-mt-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
-    find_library(BOOST_LIBRARY3 libboost_program_options-vc140-mt-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
-    find_library(BOOST_LIBRARY4 libboost_regex-vc140-mt-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
-    find_library(BOOST_LIBRARY1D libboost_filesystem-vc140-mt-gd-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
-    find_library(BOOST_LIBRARY2D libboost_system-vc140-mt-gd-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
-    find_library(BOOST_LIBRARY3D libboost_program_options-vc140-mt-gd-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
-    find_library(BOOST_LIBRARY4D libboost_regex-vc140-mt-gd-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+    if(NOT RGA_ENABLE_MT)
+        find_library(BOOST_LIBRARY1 libboost_filesystem-vc140-mt-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+        find_library(BOOST_LIBRARY2 libboost_system-vc140-mt-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+        find_library(BOOST_LIBRARY3 libboost_program_options-vc140-mt-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+        find_library(BOOST_LIBRARY4 libboost_regex-vc140-mt-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+        find_library(BOOST_LIBRARY1D libboost_filesystem-vc140-mt-gd-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+        find_library(BOOST_LIBRARY2D libboost_system-vc140-mt-gd-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+        find_library(BOOST_LIBRARY3D libboost_program_options-vc140-mt-gd-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+        find_library(BOOST_LIBRARY4D libboost_regex-vc140-mt-gd-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+    else()
+        find_library(BOOST_LIBRARY1 libboost_filesystem-vc140-mt-s-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+        find_library(BOOST_LIBRARY2 libboost_system-vc140-mt-s-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+        find_library(BOOST_LIBRARY3 libboost_program_options-vc140-mt-s-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+        find_library(BOOST_LIBRARY4 libboost_regex-vc140-mt-s-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+        find_library(BOOST_LIBRARY1D libboost_filesystem-vc140-mt-sgd-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+        find_library(BOOST_LIBRARY2D libboost_system-vc140-mt-sgd-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+        find_library(BOOST_LIBRARY3D libboost_program_options-vc140-mt-sgd-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+        find_library(BOOST_LIBRARY4D libboost_regex-vc140-mt-sgd-1_59 HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/Boost/boost_1_59_0/lib/VC14/x86_64")
+    endif()
  
 elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux" OR ${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
     # DeviceInfoLib objects are defined in radeon_gpu_analyzer_backend/CMakeLists.txt
@@ -132,10 +145,17 @@ endif()
 
 # Other libraries
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
-    find_library(TINYXML_LIB "tinyxml2.lib" HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/tinyxml2/Lib/VS2015/Win64/Release/MD")
+
+    if(NOT RGA_ENABLE_MT)
+        find_library(TINYXML_LIB "tinyxml2.lib" HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/tinyxml2/Lib/VS2015/Win64/Release/MD")
+        find_library(TINYXML_LIBD "tinyxml2-d.lib" HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/tinyxml2/Lib/VS2015/Win64/Debug/MDd")
+    else()
+        find_library(TINYXML_LIB "tinyxml2.lib" HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/tinyxml2/Lib/VS2017/Win64/Release/MT")
+        find_library(TINYXML_LIBD "tinyxml2d.lib" HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/tinyxml2/Lib/VS2017/Win64/Debug/MTd")
+    endif()
+
     find_library(YAMLCPP_LIB "libyaml-cppmd.lib" HINTS "${PROJECT_SOURCE_DIR}/../../external/yaml-cpp/lib/win64/Release")
     find_library(SPIRVCROSS_LIB "spirv-cross-core.lib" HINTS "${PROJECT_SOURCE_DIR}/../../external/vulkan/tools/windows/lib/Release")
-    find_library(TINYXML_LIBD "tinyxml2-d.lib" HINTS "${PROJECT_SOURCE_DIR}/../../external/third_party/tinyxml2/Lib/VS2015/Win64/Debug/MDd")
     find_library(YAMLCPP_LIBD "libyaml-cppmdd.lib" HINTS "${PROJECT_SOURCE_DIR}/../../external/yaml-cpp/lib/win64/Debug")
     find_library(SPIRVCROSS_LIBD "spirv-cross-core.lib" HINTS "${PROJECT_SOURCE_DIR}/../../external/vulkan/tools/windows/lib/Debug")
 else()
